[tool.poetry]
name = "pybacker"
version = "1.0.0"
description = "A simple backup tool for your files and folders"
license = "GPL-2.0-only"
authors = ["Alejandro González Momblán <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yisuschrist/pybacker"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"
requests = "^2.31.0"
rich-argparse-plus = "^0.3.1.4"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240914"

[tool.poetry.scripts]
pybacker = "pybacker.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
